src/objects/Service_Request__c.object
<CustomObject>
    <description>This objects is to store data for out of service records</description>
    <fields>
        <fullName>AM_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Lookup field stores Asset detail</description>
        <inlineHelpText>It shows Asset detail</inlineHelpText>
        <label>AM_Asset</label>
        <referenceTo>AM_Asset__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>This field stores close date for service request</description>
        <inlineHelpText>It shows Close Date for service request</inlineHelpText>
        <label>Date/Time Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>This field stores created date for service request</description>
        <inlineHelpText>It shows Created Date</inlineHelpText>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is to store Service Request description</description>
        <inlineHelpText>It shows Service Request description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mark_Asset_as_out_of_service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will fire a trigger that will set the &quot;Out of service&quot; checkbox on the corresponding asset as True.</description>
        <inlineHelpText>it shows Asset status as Out Of Service</inlineHelpText>
        <label>Mark Asset as out of service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>This field stores Priority os Service Request</description>
        <inlineHelpText>It shows priority os service request</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It stores status of service request</description>
        <inlineHelpText>It Shows Status of Service Request</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>It stores subject of service request</description>
        <inlineHelpText>It Shows Subject of Service Request</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AM_Asset__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>